[project]
name = "bjut-helper"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-material>=9.6",
    "mkdocs-minify-plugin>=0.7",
    "pypinyin>=0.51",
    "requests>=2.28",
]

[tool.setuptools]
packages = []
py-modules = []
